--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ services:
 
   db:
     container_name: es2
-    build: .
+    build: ./InvBank.Backend.Infrastructure/Database/.
     volumes:
       - pg-data:/var/lib/postgresql/shared-data/
     ports:
