--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,23 @@
 services:
 
+  api:
+    container_name: api-Backend
+    build: .
+    volumes:
+      - .\\certs\\.aspnet\\https:/https/
+    environment:
+      - ASPNETCORE_URLS=https://+;http://+
+      - ASPNETCORE_HTTPS_PORT:7022
+      - ASPNETCORE_Kestrel__Certificates__Default__Password=supersecret
+      - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/aspnetapp.pfx
+    ports:
+      - "7021:80"
+      - "7022:443"
+    networks:
+      - app-network
+    depends_on:
+      - db
+
   db:
     container_name: es2
     build: ./InvBank.Backend.Infrastructure/Database/.
@@ -13,7 +31,7 @@ services:
       - "POSTGRES_DB=${EXP_POSTGRES_DB}"
     networks:
       - app-network
-  
+
   reiport_db_interface:
     image: adminer
     restart: always
@@ -24,6 +42,8 @@ services:
 
 volumes:
   pg-data:
+  api-data:
+
 
 networks:
   app-network:
