--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,33 @@
 services:
 
-  api:
-    container_name: api-Backend
-    build: InvBank.Backend
-    volumes:
-      - .\\certs\\.aspnet\\https:/https/
-    environment:
-      - ASPNETCORE_URLS=https://+;http://+
-      - ASPNETCORE_HTTPS_PORT:7022
-      - ASPNETCORE_Kestrel__Certificates__Default__Password=supersecret
-      - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/aspnetapp.pfx
-    ports:
-      - "7021:80"
-      - "7022:443"
-    networks:
-      - app-network
-    depends_on:
-      - db
+  # api:
+  #   container_name: api-Backend
+  #   build: InvBank.Backend
+  #   volumes:
+  #     - .\\certs\\.aspnet\\https:/https/
+  #   environment:
+  #     - ASPNETCORE_URLS=https://+;http://+
+  #     - ASPNETCORE_HTTPS_PORT:7022
+  #     - ASPNETCORE_Kestrel__Certificates__Default__Password=supersecret
+  #     - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/aspnetapp.pfx
+  #   ports:
+  #     - "7021:80"
+  #     - "7022:443"
+  #   networks:
+  #     - app-network
+  #   depends_on:
+  #     - db
+
+  # web:
+  #   container_name: web-Frontend
+  #   build: InvBank.Web
+  #   ports:
+  #     - "7025:80"
+  #     - "7026:443"
+  #   networks:
+  #     - app-network
+  #   depends_on:
+  #     - api
 
   db:
     container_name: es2
@@ -43,7 +54,6 @@ services:
 volumes:
   pg-data:
   api-data:
-
 
 networks:
   app-network:
